--- a/index.html
+++ b/index.html
@@ -30,28 +30,69 @@
 		<section>
 			<div class="products">
 				<a href="#" class="product">
-					<img alt="1a product-image__a" src="https://placehold.it/160x240/7FD1B9/333333?text=1a" srcset="https://placehold.it/160x240/7FD1B9/333333?text=1a 1x, https://placehold.it/320x480/7FD1B9/333333?text=1a 2x">
-					<img alt="1b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=1b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=1b 1x, https://placehold.it/320x480/E56399/ffffff?text=1b 2x">
+					<img alt="01a" class="product-image__a" src="https://placehold.it/160x240/7FD1B9/333333?text=01a" srcset="https://placehold.it/160x240/7FD1B9/333333?text=01a 1x, https://placehold.it/320x480/7FD1B9/333333?text=01a 2x">
+					<img alt="01b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=01b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=01b 1x, https://placehold.it/320x480/E56399/ffffff?text=01b 2x">
 				</a>
 				<a href="#" class="product">
-					<img alt="2a product-image__a" src="https://placehold.it/160x240/7FD1B9/333333?text=2a" srcset="https://placehold.it/160x240/7FD1B9/333333?text=2a 1x, https://placehold.it/320x480/7FD1B9/333333?text=2a 2x">
-					<img alt="2b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=2b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=2b 1x, https://placehold.it/320x480/E56399/ffffff?text=2b 2x">
+					<img alt="02a" class="product-image__a" src="https://placehold.it/160x240/7FD1B9/333333?text=02a" srcset="https://placehold.it/160x240/7FD1B9/333333?text=02a 1x, https://placehold.it/320x480/7FD1B9/333333?text=02a 2x">
+					<img alt="02b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=02b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=02b 1x, https://placehold.it/320x480/E56399/ffffff?text=02b 2x">
 				</a>
 				<a href="#" class="product">
-					<img alt="3a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=3a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=3a 1x, https://placehold.it/320x480/7FD1B9/333333?text=3a 2x">
-					<img alt="3b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=3b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=3b 1x, https://placehold.it/320x480/E56399/ffffff?text=3b 2x">
+					<img alt="03a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=03a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=03a 1x, https://placehold.it/320x480/7FD1B9/333333?text=03a 2x">
+					<img alt="03b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=03b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=03b 1x, https://placehold.it/320x480/E56399/ffffff?text=03b 2x">
 				</a>
 				<a href="#" class="product">
-					<img alt="4a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=4a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=4a 1x, https://placehold.it/320x480/7FD1B9/333333?text=4a 2x">
-					<img alt="4b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=4b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=4b 1x, https://placehold.it/320x480/E56399/ffffff?text=4b 2x">
+					<img alt="04a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=04a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=04a 1x, https://placehold.it/320x480/7FD1B9/333333?text=04a 2x">
+					<img alt="04b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=04b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=04b 1x, https://placehold.it/320x480/E56399/ffffff?text=04b 2x">
 				</a>
 				<a href="#" class="product">
-					<img alt="5a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=5a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=5a 1x, https://placehold.it/320x480/7FD1B9/333333?text=5a 2x">
-					<img alt="5b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=5b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=5b 1x, https://placehold.it/320x480/E56399/ffffff?text=5b 2x">
+					<img alt="05a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=05a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=05a 1x, https://placehold.it/320x480/7FD1B9/333333?text=05a 2x">
+					<img alt="05b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=05b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=05b 1x, https://placehold.it/320x480/E56399/ffffff?text=05b 2x">
 				</a>
 				<a href="#" class="product">
-					<img alt="6a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=6a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=6a 1x, https://placehold.it/320x480/7FD1B9/333333?text=6a 2x">
-					<img alt="6b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=6b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=6b 1x, https://placehold.it/320x480/E56399/ffffff?text=6b 2x">
+					<img alt="06a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=06a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=06a 1x, https://placehold.it/320x480/7FD1B9/333333?text=06a 2x">
+					<img alt="06b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=06b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=06b 1x, https://placehold.it/320x480/E56399/ffffff?text=06b 2x">
+				</a>
+				<a href="#" class="product">
+					<img alt="07a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=07a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=07a 1x, https://placehold.it/320x480/7FD1B9/333333?text=07a 2x">
+					<img alt="07b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=07b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=07b 1x, https://placehold.it/320x480/E56399/ffffff?text=07b 2x">
+				</a>
+				<a href="#" class="product">
+					<img alt="08a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=08a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=08a 1x, https://placehold.it/320x480/7FD1B9/333333?text=08a 2x">
+					<img alt="08b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=08b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=08b 1x, https://placehold.it/320x480/E56399/ffffff?text=08b 2x">
+				</a>
+				<!-- 8 more! -->
+				<a href="#" class="product">
+					<img alt="09a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=09a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=09a 1x, https://placehold.it/320x480/7FD1B9/333333?text=09a 2x">
+					<img alt="09b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=09b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=09b 1x, https://placehold.it/320x480/E56399/ffffff?text=09b 2x">
+				</a>
+				<a href="#" class="product">
+					<img alt="10a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=10a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=10a 1x, https://placehold.it/320x480/7FD1B9/333333?text=10a 2x">
+					<img alt="10b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=10b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=10b 1x, https://placehold.it/320x480/E56399/ffffff?text=10b 2x">
+				</a>
+				<a href="#" class="product">
+					<img alt="11a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=11a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=11a 1x, https://placehold.it/320x480/7FD1B9/333333?text=11a 2x">
+					<img alt="11b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=11b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=11b 1x, https://placehold.it/320x480/E56399/ffffff?text=11b 2x">
+				</a>
+				<a href="#" class="product">
+					<img alt="12a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=12a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=12a 1x, https://placehold.it/320x480/7FD1B9/333333?text=12a 2x">
+					<img alt="12b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=12b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=12b 1x, https://placehold.it/320x480/E56399/ffffff?text=12b 2x">
+				</a>
+				<a href="#" class="product">
+					<img alt="13a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=13a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=13a 1x, https://placehold.it/320x480/7FD1B9/333333?text=13a 2x">
+					<img alt="13b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=13b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=13b 1x, https://placehold.it/320x480/E56399/ffffff?text=13b 2x">
+				</a>
+				<a href="#" class="product">
+					<img alt="14a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=14a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=14a 1x, https://placehold.it/320x480/7FD1B9/333333?text=14a 2x">
+					<img alt="14b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=14b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=14b 1x, https://placehold.it/320x480/E56399/ffffff?text=14b 2x">
+				</a>
+				<a href="#" class="product">
+					<img alt="15a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=15a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=15a 1x, https://placehold.it/320x480/7FD1B9/333333?text=15a 2x">
+					<img alt="15b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=15b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=15b 1x, https://placehold.it/320x480/E56399/ffffff?text=15b 2x">
+				</a>
+				<a href="#" class="product">
+					<img alt="16a" class="lazy product-image__a" data-src="https://placehold.it/160x240/7FD1B9/333333?text=16a" data-srcset="https://placehold.it/160x240/7FD1B9/333333?text=16a 1x, https://placehold.it/320x480/7FD1B9/333333?text=16a 2x">
+					<img alt="16b" class="lazy-hover product-image__b" data-src="https://placehold.it/160x240/E56399/ffffff?text=16b" data-srcset="https://placehold.it/160x240/E56399/ffffff?text=16b 1x, https://placehold.it/320x480/E56399/ffffff?text=16b 2x">
 				</a>
 			</div>
 		</section>
