--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 			<h2>Features:</h2>
 			<ol>
 				<li>Conditional loads LazyLoad v. 8 or 10 depending on IntersectionObserver support</li>
-				<li>Eagerly loads the first 8 images</li>
-				<li>Lazily loads the images from the 9th on</li>
-				<li>If the user device has a mouse:
+				<li>Eagerly loads the first 8 images, lazily loads the images from the 9th on</li>
+				<li>If a mouse movement is detected:
 					<ol>
 						<li>Lazily loads the alternative images which appear at mouseover</li>
-						<li>Fade-in effect of the alternative images ONLY after their loading is complete</li>
+						<li>The fade-in of the alternative images starts only upon their loading is complete</li>
 					</ol>
 				</li>
 			</ol>
