Did it with jQuery light

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta name="Description" content="An optimal usage of LazyLoad both for regular and alternative images loaded at mouseover">
 	<link rel="stylesheet" href="index.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script async src="index.js"></script>
+	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
+	<script defer src="index.js"></script>
 </head>
 
 <body>
