Moved explanation to readme instead of html code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>LazyLoad + Lazy 2nd Image + Lazy Fade</title>
-	<meta name="Description" content="An optimal usage of LazyLoad both for regular and alternative images loaded at mouseover">
+	<meta name="Description" content="A demo of all best practices to load and show images in a product listing page.">
 	<link rel="stylesheet" href="index.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
@@ -14,18 +14,8 @@
 <body>
 	<main>
 		<article class="intro">
-			<h1>An optimal usage of LazyLoad both for regular and alternative images loaded at mouseover</h1>
-			<h2>Features:</h2>
-			<ol>
-				<li>Conditional loads LazyLoad v. 8 or 10 depending on IntersectionObserver support</li>
-				<li>Eagerly loads the first 8 images, lazily loads the images from the 9th on</li>
-				<li>If a mouse movement is detected:
-					<ol>
-						<li>Lazily loads the alternative images which appear at mouseover</li>
-						<li>The fade-in of the alternative images starts only upon their loading is complete</li>
-					</ol>
-				</li>
-			</ol>
+			<h1>Product listing page best practices</h1>
+			<h2>A demo of all best practices to load and show images in a product listing page.</h2>
 		</article>
 		<section>
 			<div class="products">
