--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<main>
 		<article class="intro">
 			<h1>Product listing page best practices</h1>
-			<h2>A demo of all best practices to load and show images in a product listing page.</h2>
+			<p>A demo of all best practices to load and show images in a product listing page.</p>
 		</article>
 		<section>
 			<div class="products">
