Added a cross-reference to the github repo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 		<article class="intro">
 			<h1>Product listing page best practices</h1>
 			<p>A demo of all best practices to load and show images in a product listing page.</p>
+			<p>
+				<a href="https://github.com/verlok/productListingPageBestPractices/">See this on GitHub</a>
+			</p>
 		</article>
 		<section>
 			<div class="products">
