Fixed title and intro text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>LazyLoad + Lazy 2nd Image + Lazy Fade</title>
+	<title>Product listing page best practices demo</title>
 	<meta name="Description" content="A demo of all best practices to load and show images in a product listing page.">
 	<link rel="stylesheet" href="index.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,10 +14,15 @@
 <body>
 	<main>
 		<article class="intro">
-			<h1>Product listing page best practices</h1>
+			<h1>Product listing page best practices demo</h1>
 			<p>A demo of all best practices to load and show images in a product listing page.</p>
 			<p>
-				<a href="https://github.com/verlok/productListingPageBestPractices/">See this on GitHub</a>
+				<strong>
+					<a href="https://github.com/verlok/productListingPageBestPractices/blob/master/README.md">Read more</a>
+				</strong> or
+				<strong>
+					<a href="https://github.com/verlok/productListingPageBestPractices/tree/master">see the code</a>
+				</strong> on GitHub.
 			</p>
 		</article>
 		<section>
